# pyclifer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  Taskfile.yml  mkdocs.yml  pyproject.toml  versions.json
.claude/: CLAUDE.md
.claude/plans/: 2026-06-07-demo-page.md
.claude/specs/: 2026-06-01-deps-upgrade-fr.md  2026-06-07-demo-page-design.md  base-renderer-failed-result.md  core-simplification.md  decorators-make-context-refactor.md  demo-taskman.md  global-options-prescan.md
.github/workflows/: ci.yml  docs.yml  release.yml
0.0.14/: 404.html  index.html  objects.inv  sitemap.xml
0.0.14/configuration/: index.html
0.0.14/development/: index.html
0.0.14/error-handling/: index.html
0.0.14/examples/: index.html
0.0.14/getting-started/: index.html
0.0.14/logging/: index.html
0.0.14/output-formatting/: index.html
0.0.14/scaffolding/: index.html
0.0.14/search/: search_index.json
0.0.15/: 404.html  index.html  objects.inv  sitemap.xml
0.0.15/configuration/: index.html
0.0.15/development/: index.html
0.0.15/error-handling/: index.html
0.0.15/examples/: index.html
0.0.15/getting-started/: index.html
0.0.15/logging/: index.html
0.0.15/output-formatting/: index.html
0.0.15/scaffolding/: index.html
0.0.15/search/: search_index.json
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/configuration/: index.html
0.1.0/development/: index.html
0.1.0/error-handling/: index.html
0.1.0/examples/: index.html
0.1.0/getting-started/: index.html
0.1.0/logging/: index.html
0.1.0/output-formatting/: index.html
0.1.0/scaffolding/: index.html
0.1.1/: 404.html  index.html  sitemap.xml
0.1.1/configuration/: index.html
0.1.1/development/: index.html
0.1.1/error-handling/: index.html
0.1.1/examples/: index.html
0.1.1/getting-started/: index.html
0.1.1/how-to/: index.html
0.1.1/logging/: index.html
0.1.1/output-formatting/: index.html
0.1.1/scaffolding/: index.html
0.1.2/: 404.html  index.html  sitemap.xml
0.1.2/configuration/: index.html
0.1.2/development/: index.html
0.1.2/error-handling/: index.html
0.1.2/examples/: index.html
0.1.2/getting-started/: index.html
0.1.2/how-to/: index.html
0.1.2/logging/: index.html
0.1.2/output-formatting/: index.html
0.1.2/scaffolding/: index.html
0.1.3/: 404.html  index.html  sitemap.xml
0.1.3/configuration/: index.html
0.1.3/development/: index.html
0.1.3/error-handling/: index.html
0.1.3/examples/: index.html
0.1.3/getting-started/: index.html
0.1.3/how-to/: index.html
0.1.3/logging/: index.html
0.1.3/output-formatting/: index.html
0.1.3/scaffolding/: index.html
0.1.4/: 404.html  index.html  sitemap.xml
0.1.4/configuration/: index.html
0.1.4/development/: index.html
0.1.4/error-handling/: index.html
0.1.4/examples/: index.html
0.1.4/getting-started/: index.html
0.1.4/how-to/: index.html
0.1.4/logging/: index.html
0.1.4/output-formatting/: index.html
0.1.4/scaffolding/: index.html
0.1.5/: 404.html  index.html  sitemap.xml
0.1.5/configuration/: index.html
0.1.5/development/: index.html
0.1.5/error-handling/: index.html
0.1.5/examples/: index.html
0.1.5/getting-started/: index.html
0.1.5/how-to/: index.html
0.1.5/logging/: index.html
0.1.5/output-formatting/: index.html
0.1.5/scaffolding/: index.html
0.1.6/: 404.html  index.html  sitemap.xml
0.1.6/configuration/: index.html
0.1.6/development/: index.html
0.1.6/error-handling/: index.html
0.1.6/examples/: index.html
0.1.6/getting-started/: index.html
0.1.6/how-to/: index.html
0.1.6/logging/: index.html
0.1.6/output-formatting/: index.html
0.1.7/: 404.html  index.html  sitemap.xml
0.2.0/: 404.html  index.html  sitemap.xml
0.3.0/: 404.html  index.html  sitemap.xml
0.3.1/: 404.html  index.html  objects.inv  sitemap.xml
0.4.0/: 404.html  index.html  sitemap.xml
0.4.1/: 404.html  index.html  objects.inv  sitemap.xml
0.4.2/: 404.html  index.html  sitemap.xml
0.5.0/: 404.html  index.html  sitemap.xml
0.6.0/: 404.html  index.html  sitemap.xml
0.7.0/: 404.html  index.html  sitemap.xml
0.7.1/: 404.html  index.html  sitemap.xml
0.7.2/: 404.html  index.html  sitemap.xml
dev/: 404.html  index.html  objects.inv  sitemap.xml
docs/: configuration.md  demo.md  development.md  error-handling.md  examples.md  getting-started.md  index.md  logging.md  output-formatting.md  scaffolding.md
tests/: conftest.py
(+635 files in other folders)
